# api/console/resource/app_grpc.pb.go
@@ -1,0 +1,109 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.3.0
+// - protoc             v4.23.2
+// source: console/resource/app.proto
+
+package resource
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.32.0 or later.
+const _ = grpc.SupportPackageIsVersion7
+
+const (
+	App_List_FullMethodName = "/api.console.resource.App/List"
+)
+
+// AppClient is the client API for App service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type AppClient interface {
+	List(ctx context.Context, in *AppListRequest, opts ...grpc.CallOption) (*AppListReply, error)
+}
+
+type appClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewAppClient(cc grpc.ClientConnInterface) AppClient {
+	return &appClient{cc}
+}
+
+func (c *appClient) List(ctx context.Context, in *AppListRequest, opts ...grpc.CallOption) (*AppListReply, error) {
+	out := new(AppListReply)
+	err := c.cc.Invoke(ctx, App_List_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// AppServer is the server API for App service.
+// All implementations must embed UnimplementedAppServer
+// for forward compatibility
+type AppServer interface {
+	List(context.Context, *AppListRequest) (*AppListReply, error)
+	mustEmbedUnimplementedAppServer()
+}
+
+// UnimplementedAppServer must be embedded to have forward compatible implementations.
+type UnimplementedAppServer struct {
+}
+
+func (UnimplementedAppServer) List(context.Context, *AppListRequest) (*AppListReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method List not implemented")
+}
+func (UnimplementedAppServer) mustEmbedUnimplementedAppServer() {}
+
+// UnsafeAppServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to AppServer will
+// result in compilation errors.
+type UnsafeAppServer interface {
+	mustEmbedUnimplementedAppServer()
+}
+
+func RegisterAppServer(s grpc.ServiceRegistrar, srv AppServer) {
+	s.RegisterService(&App_ServiceDesc, srv)
+}
+
+func _App_List_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AppListRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AppServer).List(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: App_List_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AppServer).List(ctx, req.(*AppListRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// App_ServiceDesc is the grpc.ServiceDesc for App service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var App_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "api.console.resource.App",
+	HandlerType: (*AppServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "List",
+			Handler:    _App_List_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "console/resource/app.proto",
+}
