# openapi.yaml
@@ -3,13 +3,57 @@
 
 openapi: 3.0.3
 info:
-    title: Zone API
-    description: |-
-        ZoneService is the resource `data-center` definition.
-
-         version: v1
+    title: ""
     version: 0.0.1
 paths:
+    /api/console/app:
+        get:
+            tags:
+                - App
+            operationId: App_List
+            parameters:
+                - name: current
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: page_size
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.console.resource.AppListReply'
+    /api/console/node:
+        get:
+            tags:
+                - Node
+            operationId: Node_List
+            parameters:
+                - name: current
+                  in: query
+                  description: 页码
+                  schema:
+                    type: integer
+                    format: int32
+                - name: page_size
+                  in: query
+                  description: 每页数量
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.console.resource.NodeListReply'
     /api/console/zone:
         get:
             tags:
@@ -167,6 +211,48 @@ paths:
                                 $ref: '#/components/schemas/api.console.resource.DisableZoneReply'
 components:
     schemas:
+        api.console.resource.Agent:
+            type: object
+            properties:
+                type:
+                    type: integer
+                    description: 部署状态
+                    format: enum
+                heartbeat_time:
+                    type: integer
+                    description: 上次心跳时间
+                    format: int64
+                version:
+                    type: string
+                    description: Agent版本
+        api.console.resource.AppInfo:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                name:
+                    type: string
+                description:
+                    type: string
+                icon:
+                    type: string
+                created_at:
+                    type: integer
+                    format: int64
+                updated_at:
+                    type: integer
+                    format: int64
+        api.console.resource.AppListReply:
+            type: object
+            properties:
+                data:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/api.console.resource.AppInfo'
+                total:
+                    type: integer
+                    format: int64
         api.console.resource.CreateZoneReply:
             type: object
             properties:
@@ -223,6 +309,55 @@ components:
             properties:
                 data:
                     $ref: '#/components/schemas/api.console.resource.ZoneInfo'
+        api.console.resource.NodeInfo:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    description: 节点ID
+                    format: int32
+                name:
+                    type: string
+                    description: 节点名称
+                ip:
+                    type: string
+                    description: 节点IP
+                agent:
+                    $ref: '#/components/schemas/api.console.resource.Agent'
+                created_at:
+                    type: integer
+                    description: 节点创建时间
+                    format: int64
+                updated_at:
+                    type: integer
+                    description: 节点更新时间
+                    format: int64
+                zone_id:
+                    type: integer
+                    description: 可用区ID
+                    format: int64
+                zone_code:
+                    type: string
+                    description: 可用区编码
+                zone_name:
+                    type: string
+                    description: 可用区名称
+                region_code:
+                    type: string
+                    description: 地区
+                region_name:
+                    type: string
+                    description: 地区名称
+        api.console.resource.NodeListReply:
+            type: object
+            properties:
+                data:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/api.console.resource.NodeInfo'
+                total:
+                    type: integer
+                    format: int64
         api.console.resource.UpdateZoneReply:
             type: object
             properties: {}
@@ -274,4 +409,14 @@ components:
                     description: 更新时间
             description: 可用区
 tags:
+    - name: App
+    - name: Node
+      description: |-
+        节点服务
+
+         节点服务提供可用部署节点相关的接口
     - name: Zone
+      description: |-
+        ZoneService is the resource `data-center` definition.
+
+         version: v1
